// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PageHeader > renders a default page header 1`] = `
<DocumentFragment>
  <div
    class="_header_eb25c9"
    data-size="lg"
  >
    <div
      class="_big-icon_6ba1e4 _icon_eb25c9"
      data-kind="primary"
      data-size="lg"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3.5 20q-.625 0-1.062-.437A1.45 1.45 0 0 1 2 18.5q0-.625.438-1.062A1.45 1.45 0 0 1 3.5 17H4V6q0-.824.588-1.412A1.93 1.93 0 0 1 6 4h14q.424 0 .712.287Q21 4.576 21 5t-.288.713A.97.97 0 0 1 20 6H6v11h4.5q.624 0 1.063.438.437.437.437 1.062t-.437 1.063A1.45 1.45 0 0 1 10.5 20zM15 20a.97.97 0 0 1-.713-.288A.97.97 0 0 1 14 19V9q0-.424.287-.713A.97.97 0 0 1 15 8h6q.424 0 .712.287Q22 8.576 22 9v10q0 .424-.288.712A.97.97 0 0 1 21 20zm1-3h4v-7h-4z"
        />
      </svg>
    </div>
    <h1
      class="_typography_61e060 _font-heading-md-semibold_61e060"
    >
      Title goes here
    </h1>
    <p>
      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
    </p>
    <a
      class="_link_d78ce8"
      data-kind="primary"
      data-size="md"
      rel="noreferrer noopener"
    >
      Learn more
    </a>
  </div>
</DocumentFragment>
`;

exports[`PageHeader > renders a medium page header 1`] = `
<DocumentFragment>
  <div
    class="_header_eb25c9"
    data-size="md"
  >
    <div
      class="_big-icon_6ba1e4 _icon_eb25c9"
      data-kind="primary"
      data-size="md"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3.5 20q-.625 0-1.062-.437A1.45 1.45 0 0 1 2 18.5q0-.625.438-1.062A1.45 1.45 0 0 1 3.5 17H4V6q0-.824.588-1.412A1.93 1.93 0 0 1 6 4h14q.424 0 .712.287Q21 4.576 21 5t-.288.713A.97.97 0 0 1 20 6H6v11h4.5q.624 0 1.063.438.437.437.437 1.062t-.437 1.063A1.45 1.45 0 0 1 10.5 20zM15 20a.97.97 0 0 1-.713-.288A.97.97 0 0 1 14 19V9q0-.424.287-.713A.97.97 0 0 1 15 8h6q.424 0 .712.287Q22 8.576 22 9v10q0 .424-.288.712A.97.97 0 0 1 21 20zm1-3h4v-7h-4z"
        />
      </svg>
    </div>
    <h1
      class="_typography_61e060 _font-heading-sm-semibold_61e060"
    >
      Title goes here
    </h1>
    <p>
      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
    </p>
    <a
      class="_link_d78ce8"
      data-kind="primary"
      data-size="md"
      rel="noreferrer noopener"
    >
      Learn more
    </a>
  </div>
</DocumentFragment>
`;
